[Refactor] data workflow에 Java 21 API 적용 (#2165)